# openapi: '3.0 api-docs.yml
@@ -1,13 +1,17 @@
 openapi: '3.0.2'
 info:
-  title: Geotag API Documentations
+  title: Geotag Mobile Apps API Documentations
   description: this API just a references how the system on our apps is work, there might be some different Responses between the docs and Apps
   version: 'BETA'
+  license:
+    name: Apache 2.0
+    url: https://www.apache.org/licenses/LICENSE-2.0.html
+
 servers:
   - url: http://localhost:3000/api
   - url: http://localhost:3000
 paths:
-  /login:
+  /auth/login:
     post:
       tags:
         - Authentication System
@@ -32,34 +36,7 @@ paths:
         '401':
           description: Authentication failed
 
-  /register:
-    post:
-      tags:
-        - Authentication System
-      summary: Register a new Partner
-      operationId: register-web
-      requestBody:
-        description: Create a new user account for Partner
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RegisterPartner'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/RegisterPartner'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/RegisterPartner'
-        required: true
-      responses:
-        '200':
-          description: Created, redirected to login.
-        '409':
-          description: User already exists
-        '500':
-          description: Internal Server Error
-
-  /register/mobile:
+  /auth/register:
     post:
       tags:
         - Authentication System
@@ -70,13 +47,13 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RegisterMobile'
+              $ref: '#/components/schemas/Register'
           application/xml:
             schema:
-              $ref: '#/components/schemas/RegisterMobile'
+              $ref: '#/components/schemas/Register'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/RegisterMobile'
+              $ref: '#/components/schemas/Register'
         required: true
       responses:
         '200':
@@ -106,46 +83,7 @@ components:
           format: password
           example: password123
 
-    RegisterPartner:
-      type: object
-      required:
-        - username
-        - email
-        - password
-        - businessName
-        - nib
-        - telephone
-        - logo
-      properties:
-        username:
-          type: string
-          format: string
-        email:
-          type: string
-          format: string
-        password:
-          type: string
-          minimum: 6
-          format: password
-        businessName:
-          type: string
-          format: string
-        nib:
-          type: string
-          format: string
-        telephone:
-          type: string
-          format: string
-          description: must be a valid phone number.
-        deskripsi:
-          type: string
-          format: string
-        logo:
-          type: string
-          format: binary
-          description: the image is handler by multer and get stored in cloud storage, return a url.
-
-    RegisterMobile:
+    Register:
       type: object
       required:
         - firstname
