# src/auth/auth.controller.ts
@@ -4,6 +4,7 @@ import {
   Controller,
   FileTypeValidator,
   Get,
+  HttpStatus,
   ParseFilePipe,
   Post,
   Render,
@@ -11,12 +12,13 @@ import {
   UploadedFile,
   UseInterceptors,
 } from '@nestjs/common';
-import { CookieOptions, Response } from 'express';
-import { LoginUserModel, RegisterUserModel } from '../models/login.model';
-import { admin } from 'src/main';
+import { Response } from 'express';
+import { LoginUserModel } from '../models/login.model';
+import { cookieOptions } from 'src/main';
 import { RegisterService } from './register.service';
 import { LoginService } from './login.service';
 import { FileInterceptor } from '@nestjs/platform-express';
+import { RegisterUserModel } from 'src/models/register.model';
 
 // Define a controller for the '/register' route
 @Controller('register')
@@ -40,14 +42,11 @@ export class RegisterController {
   ) {
     const { email, businessName } = body;
 
-    console.log(body);
-
     if (!this.registerService.checkExistingUser(email)) {
-      res.send('user already exist').status(401);
+      return res.status(HttpStatus.CONFLICT).send('User already exists');
     }
 
     try {
-      logo.originalname = 'logo.png';
       // check if user already partner/admin/approval
       const image = await this.registerService.storeImage(
         `${businessName}/logo`,
@@ -55,12 +54,12 @@ export class RegisterController {
       );
       body.logo = image;
       // Store the user data (including the logo) in the database
-      console.log(body);
       await this.registerService.storeUnapprovedUser(body);
       // Redirect to the login page
-      res.redirect('/login');
+      res.status(HttpStatus.OK).redirect('/login');
     } catch (error) {
-      return error;
+      console.error(error); // Log the detailed error for debugging
+      return res.status(500).send('Internal Server Error');
     }
   }
 }
@@ -69,53 +68,43 @@ export class RegisterController {
 @Controller('login')
 export class LoginController {
   constructor(private loginService: LoginService) {}
-  // cookie expiration in day
-  private duration = 1000 * 3600 * 24 * parseInt(process.env.COOKIES_EXP);
-  private cookieOptions: CookieOptions = {
-    maxAge: this.duration,
-    httpOnly: true,
-    signed: true,
-    expires: new Date(Date.now() + this.duration),
-    secure: process.env.ENV_TYPE === 'PROD',
+
+  private readonly roleRedirects = {
+    admin: '/admin',
+    approver: '/admin', // Redirecting approvers to the same URL as admins
+    partner: '/partner',
+    default: '/register', // Default redirect for other roles
   };
+
+  // Handle GET requests to check for existing cookies
+  @Render('login')
+  @Get()
+  async renderLogin() {}
 
   // Handle POST requests to set cookies and redirect to '/dashboard'
   @Post()
-  async setCookie(
+  async LoginUser(
     @Body() body: LoginUserModel,
     @Res({ passthrough: true }) res: Response,
   ) {
     try {
       // Authenticate the user and obtain the necessary data
-      const data = await this.loginService.loginUser(body);
-      // Create a session cookie using Firebase Admin SDK
-      const sessionCookie = await admin
-        .auth()
-        .createSessionCookie(data.idToken, { expiresIn: this.duration }); // counted in milliseconds
+      const { data, sessionCookie } =
+        await this.loginService.handleAuthentication(body);
 
       // Set 'id' cookie with a simple value
-      res.cookie('id', data, this.cookieOptions);
-
+      res.cookie('id', data, cookieOptions);
       // Set 'session' cookie with the session cookie value
-      res.cookie('session', sessionCookie, this.cookieOptions);
+      res.cookie('session', sessionCookie, cookieOptions);
 
       // Redirect to the appropriate page and return to avoid further execution
-      if (data.role === 'admin' || data.role === 'approver') {
-        return res.redirect('/admin');
-      } else if (data.role === 'partner') {
-        return res.redirect('/partner');
-      } else {
-        return res.redirect('/register');
-      }
+      const redirectUrl =
+        this.roleRedirects[data.role] || this.roleRedirects.default;
+      res.redirect(redirectUrl);
     } catch (error) {
       // Handle authentication errors
       console.error(error);
-      return res.status(401).send('Authentication failed');
+      return res.status(HttpStatus.UNAUTHORIZED).send('Authentication failed');
     }
   }
-
-  // Handle GET requests to check for existing cookies
-  @Render('login')
-  @Get()
-  async getCookie() {}
 }
