# src/models/login.model.ts
@@ -1,10 +1,4 @@
-import {
-  IsEmail,
-  IsMobilePhone,
-  IsNumberString,
-  IsString,
-  MinLength,
-} from 'class-validator';
+import { IsEmail, IsString, MinLength } from 'class-validator';
 
 export class LoginUserModel {
   @IsEmail()
@@ -15,56 +9,3 @@ export class LoginUserModel {
   @IsString()
   password: string;
 }
-
-export class RegisterUserModel {
-  @IsString()
-  username: string;
-
-  @IsString()
-  @IsEmail()
-  email: string;
-
-  @MinLength(6)
-  @IsString()
-  password: string;
-
-  @IsString()
-  businessName: string;
-
-  @IsNumberString()
-  nib: string;
-
-  @IsMobilePhone()
-  telephone: string;
-
-  @IsString()
-  deskripsi?: string;
-
-  logo?: string;
-}
-
-// export class FinalUserModelWithRole {
-//   @IsString()
-//   uuid: string;
-
-//   @IsString()
-//   displayName: string;
-
-//   @IsEmail()
-//   email: string;
-
-//   @IsString()
-//   businessName: string;
-
-//   @IsNumberString()
-//   nib: string;
-
-//   @IsMobilePhone()
-//   telephone: string;
-
-//   @IsString()
-//   deskripsi: string;
-
-//   @IsDateString()
-//   timestamp?: string;
-// }
